...
        }
    }

    var title: String {
        switch self {
        case .home:      return "Home Menu"
        case .squad:     return "Squad"
        case .table:     return "Competitions"
        case .fixtures:  return "Calendar"
        case .club:      return "Club Facilities"
        case .manager:   return "Manager Office"
        case .search:    return "Player Search"
        case .transfers: return "Transfers & Finances"
...
